2005-12-04  Damien Sandras  <dsandras@gnome.org>

	* src/stunclient.cpp: Fixed small bug with detection.

2005-12-04  Damien Sandras  <dsandras@gnome.org>

	* configure.in, src/Makefile.am, src/common.h, src/config.cpp,
	src/endpoint.cpp, src/endpoint.h, src/gnomemeeting.cpp, src/lid.cpp,
	src/lid.h, src/main_window.cpp, src/pref_window.cpp, 
	src/sound_handling.cpp: Removed IXJ support as it is now discontinued.

2005-12-04  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.schemas.in.in: Changed default size for accounts window.

2005-12-04  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Kept the standard presentation.

2005-12-04  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.schemas.in.in src/accounts.cpp src/config.cpp 
	src/druid.cpp src/endpoint.cpp src/endpoint.h 
	src/main_window.cpp src/pref_window.cpp src/stunclient.cpp 
	src/stunclient.h : Made IP Translation and STUN support conflicting 
	technics. Simplified NAT support in the preferences window. 
	Improved STUN client so that it displays
	a progress dialog when required.
	
2005-12-01  Damien Sandras  <dsandras@gnome.org>

	* src/chat_window.cpp: Populate the history when creating the tab.

2005-12-01  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Have a more GTK+ way of dealing with DTMFs 
	sent using the dialpad/keypad.
	Thanks to CJ van den Berg for suggesting this.

2005-12-01  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Added patch from Marius Nuennerich for FreeBSD
	support.

2005-11-30  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.schemas.in.in, src/config.cpp: Updated the public IP 
	detector to gnomemeeting.net as the old seconix.com is dead.

2005-11-30  Damien Sandras  <dsandras@gnome.org>

	* src/druid.cpp: Added possibility to signup for a GnomeMeeting.NET 
	account.

	* src/misc.cpp, src/main_window.cpp: Fixed leak.

	* src/tools.cpp: Added security checks.

2005-11-29  Damien Sandras  <dsandras@gnome.org>
