@@ -193,7 +193,8 @@ about_callback (GtkWidget *widget,
                           "Damien Sandras <dsandras@seconix.com>",
 			  pixbuf);
 
-  g_object_unref (pixbuf);
+  if (pixbuf)
+    g_object_unref (pixbuf);
 
   gtk_window_set_transient_for (GTK_WINDOW (abox), GTK_WINDOW (parent_window));
   gtk_window_present (GTK_WINDOW (abox));
