@@ -1,3 +1,9 @@
+2005-12-04  Julien Puydt  <jpuydt@free.fr>
+
+	* src/callbacks.cpp, src/chat_window.cpp, src/druid.cpp,
+	src/log_window.cpp, src/main_window.cpp, src/tools.cpp: Made the case
+	of unfound pixbufs better handled.
+
 2005-12-04  Damien Sandras  <dsandras@gnome.org>
 
 	* src/stunclient.cpp: Fixed small bug with detection.
